--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "src",
     "paths":{
       "@styles/*":["styles/*"],
-      "@pages/*":["pages/*"],
+      "@pages/*":["src/pages/*"],
     }
   }
 }
