--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "devDependencies": {
     "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3"
+    "eslint-config-next": "13.0.3",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1"
   }
 }
