--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,12 @@
     "baseUrl": "src",
     "paths":{
       "@styles/*":["styles/*"],
-      "@pages/*":["src/pages/*"],
+      "@pages/*":["pages/*"],
+      "@common/*":["common/*"],
+      "@components/*":["components/*"],
+      "@hooks/*":["hooks/*"],
+      "@layout/*":["layout/*"],
+      "@services/*":["services/*"]
     }
   }
 }
